fix mobile menu icon alignment on 800px width

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -2321,24 +2321,16 @@ div[id*='res'] .oese-search-result .p_title a{ color:#2d8700; font-size:20px; fo
     .topbar-social-icons{width: 26%;}
 }
 @media (max-width: 991.98px) {
-    .responsiv-menu .responsiv-menu_ul{display: block;list-style: none;padding: 0;margin-bottom: 0;}
-    .responsiv-menu .responsiv-menu_ul li{display: inline;float: left;}
-    .responsiv-menu .responsiv-menu_ul li a{font-size: 15px;padding: 10px 40px;color: #fff;float: left;}
-    .responsive-menu-section .navi_icn .fa-bars, .responsive-menu-section .navi_icn .fa-times{top:0 !important;}
-    .footer-col-custom-spacing{margin-top:20px;}
-    .footer-col-custom-spacing:nth-child(1),
-    .footer-col-custom-spacing:nth-child(2){
-        margin-top:0;
-    }
-    .custom-grid-mobile-margin-top:nth-child(3){
-        margin-top: 52px !important;
-    }
-    .custom-image-main-section .custom-image-heading {
-        padding: 0 1rem;
-    }
-    .custom-image-main-section .custom-image-heading p {
-        font-size: 18px !important;
-    }
+	.responsiv-menu .responsiv-menu_ul{display: block;list-style: none;padding: 0;margin-bottom: 0;}
+	.responsiv-menu .responsiv-menu_ul li{display: inline;float: left;}
+	.responsiv-menu .responsiv-menu_ul li a{font-size: 15px;padding: 10px 40px;color: #fff;float: left;}
+	.responsive-menu-section .navi_icn .fa-bars, .responsive-menu-section .navi_icn .fa-times{top:0 !important; text-align:right;}
+	.footer-col-custom-spacing{margin-top:20px;}
+	.footer-col-custom-spacing:nth-child(1),
+	.footer-col-custom-spacing:nth-child(2){ margin-top:0; }
+	.custom-grid-mobile-margin-top:nth-child(3){ margin-top: 52px !important; }
+	.custom-image-main-section .custom-image-heading { padding: 0 1rem; }
+	.custom-image-main-section .custom-image-heading p { font-size: 18px !important; }
 }
 @media (max-width: 767.98px){
     #searchform.searchform a {right: 15px;}
